--- a/_config.yml
+++ b/_config.yml
@@ -34,4 +34,4 @@ paginate: 8
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
 
-gems: [jekyll-paginate]
+gems: [jekyll-sitemap]
