--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ permalink: none
 paginate: 8
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
-exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules, _site]
 
 gems: [jekyll-sitemap]
 
