--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Grax Media
 
 # Short description (goes below the title; it will also be used in the RSS feed)
-description: Live to code!
+description: Continuous Improvement for your Life, your Team, and your Code
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: David Walker
