--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,9 @@ collections:
   home_page_sections:
     output: false
   
+  page_sections:
+    output: false
+  
   authors:
     output: false
     
