--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ category_dir: /
 #baseurl: /path/to/blog 
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://coding-gt.grax.com
+url: http://grax.com
 
 #### Under the Hood Stuff #####
 
