--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ category_dir: /
 #baseurl: /path/to/blog 
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://secureapplicationlifestyle.com
+url: https://grax32.com
 
 #### Under the Hood Stuff #####
 
@@ -33,6 +33,7 @@ paginate: 8
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules, _site]
 
 gems: [jekyll-sitemap]
+plugins: [jekyll-paginate]
 
 collections:
   tags:
