--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,7 @@ paginate: 8
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules, _site]
 
-gems: [jekyll-sitemap]
-plugins: [jekyll-paginate]
+plugins: [jekyll-sitemap, jekyll-paginate]
 
 collections:
   tags:
